6.4/api/Classes/classshapeworks_1_1CompareSettings.md
---
title: shapeworks::CompareSettings

---

# shapeworks::CompareSettings





## Public Functions

|                | Name           |
| -------------- | -------------- |
| DisplayMode | **[get_display_mode](../Classes/classshapeworks_1_1CompareSettings.md#function-get-display-mode)**() |
| bool | **[get_mean_shape_checked](../Classes/classshapeworks_1_1CompareSettings.md#function-get-mean-shape-checked)**() |

## Public Attributes

|                | Name           |
| -------------- | -------------- |
| bool | **[compare_enabled_](../Classes/classshapeworks_1_1CompareSettings.md#variable-compare-enabled-)**  |
| bool | **[surface_distance_mode_](../Classes/classshapeworks_1_1CompareSettings.md#variable-surface-distance-mode-)**  |
| bool | **[original_checked_](../Classes/classshapeworks_1_1CompareSettings.md#variable-original-checked-)**  |
| bool | **[groomed_checked_](../Classes/classshapeworks_1_1CompareSettings.md#variable-groomed-checked-)**  |
| bool | **[reconstructed_checked_](../Classes/classshapeworks_1_1CompareSettings.md#variable-reconstructed-checked-)**  |
| bool | **[mean_shape_checked_](../Classes/classshapeworks_1_1CompareSettings.md#variable-mean-shape-checked-)**  |
| float | **[opacity_](../Classes/classshapeworks_1_1CompareSettings.md#variable-opacity-)**  |

## Public Functions Documentation

### function get_display_mode

```cpp
inline DisplayMode get_display_mode()
```


### function get_mean_shape_checked

```cpp
inline bool get_mean_shape_checked()
```


## Public Attributes Documentation

### variable compare_enabled_

```cpp
bool compare_enabled_ = false;
```


### variable surface_distance_mode_

```cpp
bool surface_distance_mode_ = false;
```


### variable original_checked_

```cpp
bool original_checked_ = false;
```


### variable groomed_checked_

```cpp
bool groomed_checked_ = false;
```


### variable reconstructed_checked_

```cpp
bool reconstructed_checked_ = false;
```


### variable mean_shape_checked_

```cpp
bool mean_shape_checked_ = false;
```


### variable opacity_

```cpp
float opacity_ = 1.0;
```


-------------------------------

Updated on 2023-02-16 at 01:32:43 +0000